<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seven_dof_arm</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="maalon@todo.todo">maalon</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>gazebo_ros2_control</build_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path = "/home/maalon/robot_arm_ws/install/seven_dof_arm/share"/>
  </export>
</package>
